[package]
name = "suricata"
description = "wakuwaku animal quiz bot"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2 = "0.8"
r2d2_sqlite = "0.13"
